--- a/SportsStore.WebUI/Views/Product/List.cshtml
+++ b/SportsStore.WebUI/Views/Product/List.cshtml
@@ -1,11 +1,11 @@
 ﻿@using SportsStore.Domain.Entities
-@model IEnumerable<Product>
+@model SportsStore.WebUI.Models.ProductsListViewModel
 
 @{
     ViewBag.Title = "Products";
 }
 
-@foreach (var p in Model)
+@foreach (var p in Model.Products)
 {
     <div>
         <h3>@p.Name</h3>
@@ -16,3 +16,6 @@
 
 }
 
+<div>
+    @Html.PageLinks(Model.PagingInfo,x=>Url.Action("List", new { page = x}))
+</div>
