--- a/SportsStore.WebUI/Views/Shared/_Layout.cshtml
+++ b/SportsStore.WebUI/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
     </div>
     <div class="row panel">
         <div id="categories" class="col-xs-3">
-            Put something useful here later
+           @Html.Action("menu","Nav")
         </div>
         <div class="col-xs-8">
             @RenderBody()
