--- a/SportsStore.WebUI/Views/Shared/ProductSummary.cshtml
+++ b/SportsStore.WebUI/Views/Shared/ProductSummary.cshtml
@@ -5,6 +5,17 @@
         <strong>@Model.Name</strong>
         <span class="pull-right label label-primary">@Model.Price.ToString("c")</span>
     </h3>
+
+    @using (Html.BeginForm("AddToCart","Cart"))
+    {
+        <div class="pull-right">
+            @Html.HiddenFor(x=>x.ProductID)
+            @*@Html.DisplayFor(x => x.ProductID)*@
+            <input type="submit" class="btn btn-success" value="Add to cart">
+            </div>
+
+    }
+
     <span class="lead">@Model.Description</span>
 
 
