--- a/SportsStore.WebUI/Views/Shared/ProductSummary.cshtml
+++ b/SportsStore.WebUI/Views/Shared/ProductSummary.cshtml
@@ -11,7 +11,7 @@
         <div class="pull-right">
             @Html.HiddenFor(x=>x.ProductID)
             @*@Html.DisplayFor(x => x.ProductID)*@
-            @Html.Hidden("returnUrl", Request.Url.PathAndQuery);
+            @Html.Hidden("returnUrl", Request.Url.PathAndQuery)
             <input type="submit" class="btn btn-success" value="Add to cart">
             </div>
 
