--- a/SportsStore.WebUI/Views/Shared/_Layout.cshtml
+++ b/SportsStore.WebUI/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
     <script src="~/Scripts/modernizr-2.6.2.js"></script>
 </head>
 <body>
+
     @*<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
             <div class="navbar-header">
@@ -27,29 +28,38 @@
         </div>
     </div>*@
 
-    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-        <a class="navbar-brand" href="#">SPORTS STORE</a>
-    </div>
-    <div class="row panel">
-        <div id="categories" class="col-xs-3">
-           @Html.Action("menu","Nav")
+    <div class="container">
+
+        <div class="navbar navbar-inverse" role="navigation">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="#">SPORTS STORE</a>
+                </div>
+                    @Html.Action("Summary", "Cart")
+             </div>
         </div>
-        <div class="col-xs-8">
-            @RenderBody()
+        <div class="row panel">
+            <div id="categories" class="col-xs-3">
+                @Html.Action("menu", "Nav")
+            </div>
+            <div class="col-xs-8">
+                @RenderBody()
+            </div>
+
         </div>
 
-    </div>
+
+        @*<div class="container body-content">
+                @RenderBody()
+                <hr />
+                <footer>
+                    <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+                </footer>
+            </div>*@
+        </div>
 
 
-    @*<div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
-    </div>*@
-
-    <script src="~/Scripts/jquery-1.10.2.min.js"></script>
-    <script src="~/Scripts/bootstrap.min.js"></script>
+        <script src="~/Scripts/jquery-1.10.2.min.js"></script>
+        <script src="~/Scripts/bootstrap.min.js"></script>
 </body>
 </html>
