--- a/SportsStore.WebUI/Views/Shared/_Layout.cshtml
+++ b/SportsStore.WebUI/Views/Shared/_Layout.cshtml
@@ -9,6 +9,13 @@
     <link href="~/Content/bootstrap-theme.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/ErrorStyles.css" rel="stylesheet" type="text/css" />
     <script src="~/Scripts/modernizr-2.6.2.js"></script>
+    <style>
+        .navbar-right{
+            float:right !important;
+            margin-right:15px;
+            margin-left:15px;
+        }
+    </style>
 </head>
 <body>
 
@@ -34,7 +41,12 @@
         <div class="navbar navbar-inverse" role="navigation">
             <div class="container-fluid">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="#">SPORTS STORE</a>
+                   
+                    <a class="navbar-brand" href="#">
+                        <span class="hidden-xs">SPORTS STORE</span>
+                    <div class="visible-xs">SPORTS</div>
+                    <div class="visible-xs">STORE</div>
+                    </a>
                 </div>
                     @Html.Action("Summary", "Cart")
              </div>
