--- a/SportsStore.WebUI/Views/Shared/_Layout.cshtml
+++ b/SportsStore.WebUI/Views/Shared/_Layout.cshtml
@@ -52,10 +52,11 @@
              </div>
         </div>
         <div class="row panel">
-            <div id="categories" class="col-xs-3">
+            <div id="categories" class="col-sm-3 hidden-xs">
                 @Html.Action("menu", "Nav")
             </div>
-            <div class="col-xs-8">
+            @*<div class="col-ms-8 col-xs-12">*@
+            <div class="col-sm-8 col-xs-12">
                 @RenderBody()
             </div>
 
