--- a/SportsStore.WebUI/Views/Shared/_Layout.cshtml
+++ b/SportsStore.WebUI/Views/Shared/_Layout.cshtml
@@ -50,6 +50,10 @@
                 </div>
                     @Html.Action("Summary", "Cart")
              </div>
+            <div class="visible-xs">
+                @Html.Action("Menu","Nav",new { horizontalLayout =true })
+            </div>
+            
         </div>
         <div class="row panel">
             <div id="categories" class="col-sm-3 hidden-xs">
