--- a/SportsStore.WebUI/Views/Shared/_AdminLayout.cshtml
+++ b/SportsStore.WebUI/Views/Shared/_AdminLayout.cshtml
@@ -15,6 +15,10 @@
 </head>
 <body>
     <div>
+        @if(TempData["message"] != null)
+        {
+            <div class="alert alert-success">@TempData["message"]</div>
+        }
         @RenderBody()
     </div>
 </body>
