--- a/SportsStore.WebUI/Views/Admin/Edit.cshtml
+++ b/SportsStore.WebUI/Views/Admin/Edit.cshtml
@@ -34,9 +34,11 @@
                    })
                         }
 
+                        @Html.ValidationMessage(property.PropertyName)
                     </div>
                 }
             }
+
         </div>
 
         <div class="panel-footer">
