--- a/SportsStore.WebUI/Views/Shared/_AdminLayout.cshtml
+++ b/SportsStore.WebUI/Views/Shared/_AdminLayout.cshtml
@@ -10,6 +10,9 @@
     <link href="~/Content/bootstrap.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/bootstrap-theme.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/ErrorStyles.css" rel="stylesheet" type="text/css" />
+    <script src="~/Scripts/jquery-3.1.0.js"></script>
+    <script src="~/Scripts/jquery.validate.js"></script>
+    <script src="~/Scripts/jquery.validate-vsdoc.js"></script>
     <title>@ViewBag.Title</title>
 
 </head>
