--- a/SportsStore.WebUI/Views/Admin/Edit.cshtml
+++ b/SportsStore.WebUI/Views/Admin/Edit.cshtml
@@ -14,32 +14,63 @@
 
 
 
-    @using (Html.BeginForm("Edit","Admin"))
+    @using (Html.BeginForm("Edit", "Admin", FormMethod.Post, new { @enctype = "multipart/form-data" }))
     {
         <div class="panel-body">
             @Html.HiddenFor(p => p.ProductID)
             @foreach (var property in ViewData.ModelMetadata.Properties)
             {
-                if (property.PropertyName != "ProductID")
+                switch (property.PropertyName)
                 {
-                    <div class="form-group">
-                        <label>@(property.DisplayName ?? property.PropertyName)</label>
-                        @if (property.PropertyName != "Description")
-                        {
-                            @Html.TextArea(property.PropertyName, null, new { @class = "form-control", rows = 5 })
-                        }
-                        else
-                        {
-                            @Html.TextBox(property.PropertyName, null, new
-                   {
-                       @class = "form-control"
-                   })
-                        }
+                    case "ProductID":
+                    case "ImageData":
+                    case "ImageMimeType":
+                        break;
+                    default:
 
-                        @Html.ValidationMessage(property.PropertyName)
-                    </div>
+                        <div class="form-group">
+                            <label>@(property.DisplayName ?? property.PropertyName)</label>
+                            @if (property.PropertyName != "Description")
+                            {
+                                @Html.TextArea(property.PropertyName, null, new { @class = "form-control", rows = 5 })
+                            }
+                            else
+                            {
+                                @Html.TextBox(property.PropertyName, null, new { @class = "form-control" })
+                            }
+
+                            @Html.ValidationMessage(property.PropertyName)
+                        </div>
+                        break;
+
                 }
             }
+
+            <div class="form-group">
+                <div style="position:relative">
+                    <label>Image</label>
+                    <a class="btn" href='javascript:;'>
+                        Choose File...
+                        <input type="file" name="Image" size="40"
+                               style="position:absolute;z-index:2;top:0;left:0;filter:alpha(opacity=0);opacity:0;background-color:transparent;color:transparent;"
+                               onchange='$("#upload-file-info").html($(this).val());'>
+
+                    </a>
+                    <span class="label label-info" id="upload-file-info"></span>
+                </div>
+
+                @if (Model.ImageData == null)
+                {
+                    <div class="form-control-static">No Image</div>
+
+                }
+                else
+                {
+                    <img class="img-thumbnail" width="150" height="150" src="@Url.Action("GetImage","Product", new { Model.ProductID})">
+                }
+            </div>
+
+
 
         </div>
 
