--- a/SportsStore.WebUI/Views/Nav/FlexMenu.cshtml
+++ b/SportsStore.WebUI/Views/Nav/FlexMenu.cshtml
@@ -6,7 +6,7 @@
 }
 
 <div class="@wrapperClasses">
-    @Html.ActionLink("Home","List","Product", new { @class = horizontal ? "btn btn-default btn-sm" : "btn btn-block btn-default btn-lg"})
+    @Html.ActionLink("Home","List","Product",null, new { @class = horizontal ? "btn btn-default btn-sm" : "btn btn-block btn-default btn-lg"})
 
     @foreach (var link in Model)
     {
